fix the fact that the github logo overlaps the link text

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -120,7 +120,7 @@ body {
             .with-shadow;
             position: relative;
             top: 10px;
-            right: -30px;
+            right: -10px;
             background: @text-background;
             padding: 10px 4px;
             border-radius: 2px;
